tests/snapshots/examples_fixtures/type_system__failing__203_hm_time_caller_missing_io_e400.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/203_hm_time_caller_missing_io_e400.flx
== compile ==
failed (compile)
== diagnostics ==
error[E400]: Missing Effect

requires effect `IO` but the enclosing context does not provide it

  examples/type_system/failing/203_hm_time_caller_missing_io_e400.flx:11:5
   |
11 |     log_event("recorded")
   |     ^^^^^^^^^^^^^^^^^^^^^
   |     --------------------- requires `IO`

Hint:
  annotate the enclosing function with `with IO`


Warning: missing CFG bytecode binding for IR call dest


Found 1 error and 1 warning.
== stdout ==
<not executed>
